--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "file-saver": "^2.0.5",
     "flaticon": "^0.1.0",
     "lottie-react": "^2.4.0",
+    "material": "^0.7.6",
+    "mathjs": "^12.1.0",
+    "mui": "0.0.1",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router": "^6.18.0",
