--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,6 +21,7 @@
     "mathjs": "^12.1.0",
     "mui": "0.0.1",
     "node-sass": "^9.0.0",
+    "postcss-css-variables": "^0.19.0",
     "react": "^17.0.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.0",
