--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/lobster": "^5.0.17",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -13,17 +14,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "file-saver": "^2.0.5",
     "flaticon": "^0.1.0",
     "lottie-react": "^2.4.0",
     "material": "^0.7.6",
     "mathjs": "^12.1.0",
-    "mui": "0.0.1",
     "node-sass": "^9.0.0",
-    "postcss-css-variables": "^0.19.0",
     "react": "^17.0.0",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.0",
     "react-icons": "^4.12.0",
     "react-router": "^6.18.0",
@@ -33,7 +31,8 @@
     "react-typed": "^1.2.0",
     "reacticon": "0.0.1",
     "reactstrap": "^9.2.1",
-    "semantic-ui-css": "^2.5.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "semantic-ui-react": "^2.1.4",
     "soft-ui-library": "^1.0.9",
     "styled-components": "^6.1.1",
