--- a/package.json
+++ b/package.json
@@ -20,21 +20,18 @@
     "lottie-react": "^2.4.0",
     "material": "^0.7.6",
     "mathjs": "^12.1.0",
-    "node-sass": "^9.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.19.0",
     "react-routes": "^0.2.6",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "reacticon": "0.0.1",
-    "reactstrap": "^9.2.1",
-    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "semantic-ui-react": "^2.1.4",
-    "soft-ui-library": "^1.0.9",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
